# timeline-2-images

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .tile_cache.sqlite  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LIBRARY_USAGE.md  LICENSE  README.md  TIMELINE_SPLIT_INFO.md  build_executable.sh  check_licenses.py  check_licenses.sh  conversation_transcript.txt  install_executable.sh  pyproject.toml  run_quality_checks.sh  test_tile_debug.py
.claude/: settings.local.json.tmp.81915.5f0c5c92fc58
.githooks/: post-commit  pre-commit
.github/workflows/: build-binaries.yml
.tile_cache/: osm-tiles.sqlite
.timeline_cache/: segments.hash
scripts/: install-git-hooks.sh
src/daily_timeline_images/: __init__.py  main.py  map_renderer.py  parquet_cache.py  split_timeline.py  sqlite_cache.py  tile_cache.py  timeline_parser.py  timeline_splitter.py
src/timeline_2_images/: __init__.py  __main__.py  app.py  banner.py  cache_path_manager.py  console_formatter.py  date_extractor.py  day_connector_builder.py  exceptions.py  main.py  map_renderer.py  point_extractor.py  segment_parser.py  split_timeline.py  sqlite_cache.py  tile_cache.py  timeline_cache.py  timeline_parser.py  timeline_parser_facade.py  timeline_splitter.py  timeline_validation_error.py  timeline_validator.py
src/timeline_2_images/cache/: __init__.py  cache_path_manager.py  json_cache.py  manager.py  segment_cache.py  sqlite_cache.py
src/timeline_2_images/config/: __init__.py  batch_config.py  cache_config.py  date_range_query.py  render_configuration.py
src/timeline_2_images/gui/: __init__.py  app.py  generation_worker.py  main_window.py  presenter.py  settings_manager.py  timeline_worker.py
src/timeline_2_images/gui/models/: __init__.py  interfaces.py  timeline_adapter.py
src/timeline_2_images/gui/widgets/: __init__.py  date_range_panel.py  file_selector.py  progress_panel.py  settings_panel.py
src/timeline_2_images/models/: __init__.py  bounds.py  processed_segment.py  render_result.py  segment.py
src/timeline_2_images/parsers/: __init__.py  date_extractor.py  point_extractor.py  segment_parser.py  timeline_cache.py  timeline_parser.py  timeline_parser_facade.py
src/timeline_2_images/processors/: __init__.py  segment_processor.py  timeline_processor.py
src/timeline_2_images/rendering/: __init__.py  map_renderer.py  tile_cache_manager.py
src/timeline_2_images/utils/: __init__.py  waypoint_simplification.py
src/timeline_2_images/validators/: __init__.py  timeline_validator.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_map_renderer.py  test_models.py  test_processors.py  test_rendering.py  test_timeline_parser.py  test_timeline_splitter.py
tests/functional/: test_batch_processing.py  test_caches.py  test_integration.py  test_single_image.py
tests/unit/: test_batch_config.py  test_cache_config.py  test_config.py  test_exceptions.py  test_gui_architecture.py  test_progress_callback.py  test_rendering.py
