[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daily-timeline-images"
version = "0.1.0"
requires-python = ">=3.13"
description = "Generate daily route map images from Google Timeline exports"
authors = [{name = "Dave", email = "david.hamber@proton.me"}]
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "matplotlib>=3.7.0",
    "contextily>=1.3.0",
    "pandas-stubs~=3.0.3",
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
