[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timeline-2-images"
version = "0.3.0"
requires-python = ">=3.12"
description = "Generate daily route map images from Google Timeline exports"
authors = [{name = "Dave", email = "david.hamber@proton.me"}]
license = {text = "EUPL-1.2"}
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "matplotlib>=3.7.0",
    "contextily>=1.3.0",
    "pandas-stubs~=3.0.3",
    "pytest>=9.1.1",
    "requests-cache>=1.3.3",
    "pyarrow>=14.0.0",
    "geopy>=2.4.0",
    "pyqt6>=6.11.0",
]

[project.scripts]
timeline-2-images = "timeline_2_images.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.0",
    "pylint>=4.0.0",
    "radon>=6.0.0",
    "black>=26.0.0",
    "mypy>=2.3.0",
    "nuitka>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pylint]
max-line-length = 100
max-args = 6
max-positional-arguments = 6
disable = ["C0111", "C0114", "C0115"]

[tool.radon]
max-complexity = 10
max-average = 7.5

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "types-requests>=2.33.0.20260712",
    "pre-commit>=4.6.0",
    "types-geopandas>=1.1.4.20260716",
    "types-shapely>=2.1.0.20260630",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "pylint>=4.0.6",
    "radon>=6.0.1",
    "black>=26.5.1",
    "mypy>=2.3.0",
    "nuitka>=4.1.3",
    "pip-licenses>=4.3.2",
    "bump2version>=1.0.1",
]
